Cleaned up SASS for all breakpoints

--- a/sass/index.html
+++ b/sass/index.html
@@ -35,12 +35,12 @@
                 <div class="price-dollars">$5</div>
                 <div class="price-per-month">PER MONTH</div>
             </div>
-            <div class="pricing-list">Free setup</div>
-            <div class="pricing-list">Custom sub-domain</div>
-            <div class="pricing-list">Standard customer support</div>
-            <div class="pricing-list">1GB file storage</div>
-            <div class="pricing-list">1 database</div>
-            <div class="pricing-list">Unlimited bandwidth</div>
+            <div class="price-list">Free setup</div>
+            <div class="price-list">Custom sub-domain</div>
+            <div class="price-list">Standard customer support</div>
+            <div class="price-list">1GB file storage</div>
+            <div class="price-list">1 database</div>
+            <div class="price-list">Unlimited bandwidth</div>
             <div class="button-box">
                 <span class="button">Choose</span>
             </div>
@@ -52,12 +52,12 @@
                 <div class="price-dollars">$25</div>
                 <div class="price-per-month">PER MONTH</div>
             </div>
-            <div class="pricing-list">Free setup</div>
-            <div class="pricing-list">Use your own domain</div>
-            <div class="pricing-list">Standard customer support</div>
-            <div class="pricing-list">10GB file storage</div>
-            <div class="pricing-list">5 databases</div>
-            <div class="pricing-list">Unlimited bandwidth</div>
+            <div class="price-list">Free setup</div>
+            <div class="price-list">Use your own domain</div>
+            <div class="price-list">Standard customer support</div>
+            <div class="price-list">10GB file storage</div>
+            <div class="price-list">5 databases</div>
+            <div class="price-list">Unlimited bandwidth</div>
             <div class="button-box">
                 <span class="button">Choose</span>
             </div>
@@ -69,12 +69,12 @@
                 <div class="price-dollars">$45</div>
                 <div class="price-per-month">PER MONTH</div>
             </div>
-            <div class="pricing-list">Free setup</div>
-            <div class="pricing-list">Use your own domain</div>
-            <div class="pricing-list">Premium customer support</div>
-            <div class="pricing-list">Unlimited file storage</div>
-            <div class="pricing-list">25 databases</div>
-            <div class="pricing-list">Unlimited bandwidth</div>
+            <div class="price-list">Free setup</div>
+            <div class="price-list">Use your own domain</div>
+            <div class="price-list">Premium customer support</div>
+            <div class="price-list">Unlimited file storage</div>
+            <div class="price-list">25 databases</div>
+            <div class="price-list">Unlimited bandwidth</div>
             <div class="button-box">
                 <span class="button">Choose</span>
             </div>
